--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "16.4.7",
     "env-cmd": "10.1.0",
     "glob": "11.0.1",
+    "mongoose": "8.12.1",
     "nodemon": "3.1.9",
     "path": "0.12.7",
     "zod": "3.24.2"
