--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "8.12.1",
     "nodemon": "3.1.9",
     "path": "0.12.7",
+    "uuid": "11.1.0",
     "zod": "3.24.2"
   },
   "devDependencies": {
