--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,7 +39,11 @@
     // Extends
     "module": "CommonJS",
     "resolveJsonModule": true,
-    "outDir": "dist"
+    "baseUrl": ".",
+    "outDir": "dist",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src/**/*.ts"]
 }
