--- a/package.json
+++ b/package.json
@@ -1,42 +1,26 @@
 {
-  "name": "synccircuit-bot",
-  "version": "0.3.0",
+  "name": "@yuudachi/yuudachi",
+  "version": "0.0.0",
   "description": "",
-  "main": "dist/index.js",
   "scripts": {
-    "build:clean": "del-cli dist/*",
-    "build:check": "npx tsc --noEmit",
-    "build:compile": "npx tsc --build && tsc-alias -p tsconfig.json",
-    "build": "npm run build:clean && npm run build:check && npm run build:compile",
-    "lint": "prettier --check . && oxlint",
-    "format": "prettier --write .",
-    "start": "npm run build && env-cmd node --enable-source-maps dist/index.js"
+    "build": "yarn workspaces run build",
+    "lint": "yarn workspaces run lint",
+    "format": "yarn workspaces run format",
+    "start:bot": "yarn workspace synccircuit run start"
   },
-  "author": "WoozyStudio <woozystudiocontact@gmail.com>",
   "keywords": [],
+  "author": "WoozyStudio <woozystudiocontact@gmail.com>",
+  "license": "AGPL-3.0",
   "private": true,
-  "license": "UNLICENSED",
-  "dependencies": {
-    "@discordjs/core": "2.0.1",
-    "@discordjs/rest": "2.4.3",
-    "colors": "1.4.0",
-    "discord-api-types": "0.37.119",
-    "discord.js": "14.18.0",
-    "dotenv": "16.4.7",
-    "env-cmd": "10.1.0",
-    "glob": "11.0.1",
-    "mongoose": "8.12.1",
-    "nodemon": "3.1.9",
-    "path": "0.12.7",
-    "uuid": "11.1.0",
-    "zod": "3.24.2"
-  },
   "devDependencies": {
-    "@types/node": "22.13.10",
-    "cpy-cli": "5.0.0",
-    "del-cli": "6.0.0",
-    "prettier": "3.5.3",
-    "tsc-alias": "^1.8.11",
     "typescript": "5.8.2"
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
+  "packageManager": "yarn@1.22.22"
 }
