fix: package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@yuudachi/yuudachi",
+  "name": "@synccircuit/synccircuit",
   "version": "0.0.0",
   "description": "",
   "scripts": {
