--- a/apps/synccircuit/package.json
+++ b/apps/synccircuit/package.json
@@ -7,7 +7,7 @@
     "build:clean": "del-cli dist/*",
     "build:check": "tsc --noEmit",
     "build:compile": "tsc --build && tsc-alias -p tsconfig.json",
-    "build": "yarn workspace @synccircuit/framework run build && yarn build:clean && yarn build:check && yarn build:compile",
+    "build": "yarn build:clean && yarn build:check && yarn build:compile",
     "lint": "prettier --check . && oxlint",
     "format": "prettier --write .",
     "start": "yarn build && node --enable-source-maps dist/index.js"
@@ -39,7 +39,7 @@
     "cpy-cli": "5.0.0",
     "del-cli": "6.0.0",
     "prettier": "3.5.3",
-    "tsc-alias": "^1.8.11",
+    "tsc-alias": "1.8.11",
     "typescript": "5.8.2"
   },
   "engines": {
